--- a/index.html
+++ b/index.html
@@ -6,51 +6,35 @@
 
 <link rel="stylesheet" href="css/game2048.css">
 
-<script src="js/underscore-min.js"></script>
-<script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/game2048.js"></script>
 
 <script>
-$(document).ready(function() {
-  $("#btnRight").click(function() {
-    moveBoxes(moveStrategies["right"]);
-  });
-  $("#btnDown").click(function() {
-    moveBoxes(moveStrategies["down"]);
-  });
-  $("#btnLeft").click(function() {
-    moveBoxes(moveStrategies["left"]);
-  });
-  $("#btnUp").click(function() {
-    moveBoxes(moveStrategies["up"]);
-  });
+const ku = (e) => {
+  switch (e.which) {
+    case 37: // LEFT
+      moveBoxes(moveStrategies["left"]);
+      break;
+    case 39: // RIGHT
+      moveBoxes(moveStrategies["right"]);
+      break;
+    case 38: // UP
+      moveBoxes(moveStrategies["up"]);
+      break;
+    case 40: // DOWN
+      moveBoxes(moveStrategies["down"]);
+      break;
+  }
+};
 
-  $(document).bind("keyup", function(e) {
-    switch (e.which) {
-      case 37: // LEFT
-        moveBoxes(moveStrategies["left"]);
-        break;
-      case 39: // RIGHT
-        moveBoxes(moveStrategies["right"]);
-        break;
-      case 38: // UP
-        moveBoxes(moveStrategies["up"]);
-        break;
-      case 40: // DOWN
-        moveBoxes(moveStrategies["down"]);
-        break;
-    }
-  });
-
+const start = () => {
   addNewBox();
   addNewBox();
   updateDisplay();
-});
+};
 </script>
 
-
 </head>
-<body>
+<body onkeyup="ku(event);" onload="start();">
 
 <div class="display-area">
 
@@ -79,15 +63,6 @@ $(document).ready(function() {
 			<button class="c c3"></button>
 			<button class="c c4"></button>
 		</div>
-	</div>
-
-
-	<div class="bpanel">
-		<button id="btnRight">Right</button>
-		<button id="btnDown">Down</button>
-		<div class="sep"></div>
-		<button id="btnLeft">Left</button>
-		<button id="btnUp">Up</button>
 	</div>
 
 	<div class="score-board">
