move files to root folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <title>2048</title>
 
-<link rel="stylesheet" href="css/game2048.css">
+<link rel="stylesheet" href="game2048.css">
 
-<script src="js/game2048.js"></script>
+<script src="game2048.js"></script>
 
 <script>
 const ku = (e) => {
