switch to css-grid

--- a/index.html
+++ b/index.html
@@ -38,31 +38,26 @@ const start = () => {
 
 <div class="display-area">
 
-	<div class="b">
-		<div class="r r1">
-			<button class="c c1"></button>
-			<button class="c c2"></button>
-			<button class="c c3"></button>
-			<button class="c c4"></button>
-		</div>
-		<div class="r r2">
-			<button class="c c1"></button>
-			<button class="c c2"></button>
-			<button class="c c3"></button>
-			<button class="c c4"></button>
-		</div>
-		<div class="r r3">
-			<button class="c c1"></button>
-			<button class="c c2"></button>
-			<button class="c c3"></button>
-			<button class="c c4"></button>
-		</div>
-		<div class="r r4">
-			<button class="c c1"></button>
-			<button class="c c2"></button>
-			<button class="c c3"></button>
-			<button class="c c4"></button>
-		</div>
+	<div class="boxes">
+		<button class="col r1 c1"></button>
+		<button class="col r1 c2"></button>
+		<button class="col r1 c3"></button>
+		<button class="col r1 c4"></button>
+
+		<button class="col r2 c1"></button>
+		<button class="col r2 c2"></button>
+		<button class="col r2 c3"></button>
+		<button class="col r2 c4"></button>
+
+		<button class="col r3 c1"></button>
+		<button class="col r3 c2"></button>
+		<button class="col r3 c3"></button>
+		<button class="col r3 c4"></button>
+
+		<button class="col r4 c1"></button>
+		<button class="col r4 c2"></button>
+		<button class="col r4 c3"></button>
+		<button class="col r4 c4"></button>
 	</div>
 
 	<div class="score-board">
